added docker and docker-compose file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-NODE_ENV=''
-PORT=''
+NODE_ENV=
+PORT=
 
-DATABASE_URL=''
+# postgres
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+DATABASE_URL=
